--- a/source/_posts/220903-220904.md
+++ b/source/_posts/220903-220904.md
@@ -1,5 +1,5 @@
 ---
-title: 220903-220904 南投兩天一夜
+title: 221105-221106 南投兩天一夜
 date: 2022-08-17 10:34:49
 tags:
 - 南投
@@ -11,9 +11,10 @@ categories: 來去環島
 <!--more-->
 
 ### 第一天
-|日期|9月3日|備註|
+|日期|11月5日|備註|
 |:-:|:----:|:--:|
-|上午|二水火車站集合|區間 3138 08:38~10:13|
+|上午|二水火車站集合|區間快 1006 08:29~09:45|
+||水里蛇窯|門票120元<br>手拉坯380元|
 |冰品|埔里遊客中心|
 |午餐|埔里|
 |下午|前往清境|
@@ -30,8 +31,8 @@ categories: 來去環島
 |早餐|晴樂景觀餐廳|早餐（08：00～10：00）|
 |上午|青青草原|
 |午餐|蘇媽媽湯圓|
-|下午||
-|回家|斗六車站|
+|下午|多肉秘境|
+|回家|斗六車站|區間 3247 17:13~18:22|
 
 ## 交通工具：汽車
 
@@ -62,3 +63,6 @@ categories: 來去環島
 |國旅券|折抵|-3000元|
 ||總計|6200元|
 ||一人|2066.67元|
+
+這趟旅程 從五一勞動節之前就計畫 結果因為疫情大爆發 延到六月底 
+再來是比澤爾確診 改期到九月初 因為颱風關係 又要延期到11/5了
