--- a/source/_posts/20230215.md
+++ b/source/_posts/20230215.md
@@ -4,6 +4,14 @@ date: 2023-02-13 08:59:56
 tags:
 ---
 
+小記錄
+11區間 3151 09:05-10:38 1小時33分
+
+12區間 3157 09:48-11:14 1小時26分
+
+13區間 3161 10:16-11:51 1小時35分
+
+美麗島轉橘線 抓20分鐘
 <!--more-->
 
 ### 面試題目
@@ -11,13 +19,23 @@ tags:
 兩分鐘 個人資訊(可打斷)
 經歷+經驗+成果
 總結能力(有沒有想要了解哪一部分)
+你好，我是黃鈺淨，畢業於國立屏東大學資管系，很高興能有這次面試的機會！若過程中有任何疑問，隨時都可以打斷我。
+
+那我有三年多的系統開發與導入的經驗，協助各部門改善流程及提升作業效率，舉例來說，在生產需求方面，達到有效管理原料數量及生產時程，減少流程上審核與傳遞時間。或者是，倉儲管理方面，協助倉管有效率地管理，提升庫存空間的運用效率，同時降低錯誤率80%及減少尋找商品時間。另外還有商品報價方面，結合採購原料價格，協助業務使用統一計算基礎，加速業務報價時程。
+
+這些專案的參與讓我有了以下能力與優勢，第一點，具備製造業現場製程、採購訂單流程模式有相當程度的了解能力；第二點，擅長團隊合作，具有較強的抗壓能力；第三點，溝通能力，開發系統時與使用者溝通上，遇到問題能夠積極地解決並提出改善建議。我相信這些過往的工作經驗和能力，能讓我勝任這個職位。相信我的熱情與積極，以及學習能力，一定能在短時間內融入公司文化，在工作崗位上表現優秀。謝謝。不知面試官有沒有想要了解哪一部分。
 
 * 為什麼想加入我們的公司？
-職位研究 公司了解
+(職位需求+行業背景+企業文化)
+職業需求
+首先本身我就是資管系出身，有一定的程式編碼能力。
+正如我在自我介紹中說到，開發了幾個專案，這些經驗讓我對於這個職位是完全接受且覺得有意思的，
+就比如我開發的系統成功解決到使用者及管理者一直困擾的問題，這讓我感覺是有成就感的，
+那會選擇貴公司的原因是基於我要面試的這個職位是符合我的職業發展規劃的。
 
 * 你的優點和缺點是什麼？
 優點
-
+有堅持原則和信念的堅定性格，對工作具有強烈的承諾。
 
 缺點
 (真實缺點→改進行動→請求建議)
@@ -29,8 +47,7 @@ tags:
 上一份工作給了我很多成長的機會，
 讓我具備職位的經驗累積和能力素養，
 希望有機會可以邁向新的台階，
-並且結合我上一份工作上的經驗在這裡成長並發揮自己的價值作用，
-想趁年輕嘗試各種工作。
+並且結合我上一份工作上的經驗在這裡成長並發揮自己的價值作用。
 
 * 講一下你的工作經歷。
 
