--- a/source/_posts/230302-230304.md
+++ b/source/_posts/230302-230304.md
@@ -19,7 +19,7 @@ tags:
 |日期|03月03日|備註|
 |:--:|:---:|:--:|
 |早餐|民宿|早餐（07：30）|
-|上午|08:00集合|新竹高鐵站|
+|上午|08:10集合|新竹高鐵站4號出口|
 ||宇老觀景台||
 ||司馬庫斯|神木群|
 |午餐|旅行社提供|西式便當|
@@ -36,19 +36,27 @@ tags:
 ||鎮西堡教堂||
 |午餐|餐廳|合菜|
 |下午|秀巒軍艦岩||
-||大老鷹瀑布||
+||青蛙石天空步道||
 ||新竹高鐵站|669 18:22-19:15|
 ||嘉義高鐵站|橘9-1|
 ||回家||
 
-## 交通工具：大眾運輸、汽車(旅行社)
+## 交通工具：大眾運輸、汽車(旅行社)、福斯九人座
 
 ## 總費用
 |類型|資訊|項目|金額|
 |:--:|:--:|:--:|:--:|
-|團費|旅展行程團||元|
+|團費|旅展行程團||4600元|
 |交通|公車|橘9-1 嘉義高鐵-麻豆來回|元|
 ||火車|新竹市區-新竹高鐵來回|元|
 ||高鐵|新竹嘉義來回|1300元|
 |住宿|在風中的背包客Hostel||500元|
 |||總計|元|
+
+## 注意事項
+
+浴巾、毛巾、沐浴乳、洗髮精、洗面乳、牙刷、牙膏
+涼鞋、防曬乳、水壺、雨傘、輕便雨衣、個人物品、藥品
+
+車隊緊急聯絡人：0933-443289 江先生
+現場緊急聯絡人：0960-991914 陳先生
