--- a/source/_posts/230302-230304.md
+++ b/source/_posts/230302-230304.md
@@ -11,20 +11,21 @@ tags:
 ### 第一天
 |日期|03月02日|備註|
 |:-:|:----:|:--:|
-|下午|麻豆轉運站|橘9-1|
+|下午|麻豆轉運站|橘9-1 17:15-18:15|
 ||嘉義高鐵站|0850 19:00-20:08|
+||六家火車站|區間1771 20:29-20:48 19分鐘|
 |住宿|在風中的背包客Hostel|晚上九點前無法入住 須提前告知<br> 隔天早上11點前退房|
 
 ### 第二天 
 |日期|03月03日|備註|
 |:--:|:---:|:--:|
-|早餐|民宿|早餐（07：30）|
-|上午|08:10集合|新竹高鐵站4號出口|
+|上午|新竹火車站|區間1708 07:34-07:53|
+||新竹高鐵站4號出口|08:10集合|
 ||宇老觀景台||
 ||司馬庫斯|神木群|
 |午餐|旅行社提供|西式便當|
 |下午|新光部落||
-|住宿|希莉克|房間620|
+|住宿|希莉克|房間 620|
 |晚餐|餐廳|合菜|
 
 ### 第三天 
@@ -38,7 +39,7 @@ tags:
 |下午|秀巒軍艦岩||
 ||青蛙石天空步道||
 ||新竹高鐵站|669 18:22-19:15|
-||嘉義高鐵站|橘9-1|
+||嘉義高鐵站|橘9-1 19:30-20:20|
 ||回家||
 
 ## 交通工具：大眾運輸、汽車(旅行社)、福斯九人座
@@ -47,11 +48,11 @@ tags:
 |類型|資訊|項目|金額|
 |:--:|:--:|:--:|:--:|
 |團費|旅展行程團||4600元|
-|交通|公車|橘9-1 嘉義高鐵-麻豆來回|元|
-||火車|新竹市區-新竹高鐵來回|元|
+|交通|公車|橘9-1 嘉義高鐵-麻豆來回|208元|
+||火車|新竹市區-新竹高鐵來回|28元|
 ||高鐵|新竹嘉義來回|1300元|
 |住宿|在風中的背包客Hostel||500元|
-|||總計|元|
+|||總計|2036元|
 
 ## 注意事項
 
