--- a/source/_posts/230302-230304.md
+++ b/source/_posts/230302-230304.md
@@ -3,10 +3,14 @@ title: 230302-230304 司馬庫斯兩天兩夜
 date: 2023-03-05 10:47:50
 tags:
 ---
+## 行程表
+<!--more-->
 
 司馬庫斯賞櫻行程
-
-<!--more-->
+搭到賓士九人座
+住到希莉克民宿
+體驗泰雅族文化及搗小米麻糬
+還有吃到小米甜甜圈
 
 ### 第一天
 |日期|03月02日|備註|
@@ -21,38 +25,43 @@ tags:
 |:--:|:---:|:--:|
 |上午|新竹火車站|區間1708 07:34-07:53|
 ||新竹高鐵站4號出口|08:10集合|
-||宇老觀景台||
-||司馬庫斯|神木群|
+||司馬庫斯|神木群<br>2.3K和門口有櫻花|
 |午餐|旅行社提供|西式便當|
 |下午|新光部落||
-|住宿|希莉克|房間 620|
+|住宿|希莉克|房間 203|
 |晚餐|餐廳|合菜|
+|晚會|體驗泰雅族文化|服飾和小米麻糬|
 
 ### 第三天 
 |日期|03月04日|備註|
 |:--:|:---:|:--:|
-|早餐|中式|早餐（08：00）|
-|上午|新光部落||
+|早餐|中式|早餐（07：00）|
+|上午|鎮西堡教堂||
+||新光部落||
 ||森林小學||
-||鎮西堡教堂||
+||秀巒軍艦岩||
 |午餐|餐廳|合菜|
-|下午|秀巒軍艦岩||
-||青蛙石天空步道||
+|下午|宇老觀景台||
+||青蛙石天空步道|有點兒無聊<br>還需要門票|
 ||新竹高鐵站|669 18:22-19:15|
 ||嘉義高鐵站|橘9-1 19:30-20:20|
 ||回家||
 
-## 交通工具：大眾運輸、汽車(旅行社)、福斯九人座
+## 交通工具：大眾運輸、汽車(旅行社)：賓士九人座
 
 ## 總費用
 |類型|資訊|項目|金額|
 |:--:|:--:|:--:|:--:|
 |團費|旅展行程團||4600元|
 |交通|公車|橘9-1 嘉義高鐵-麻豆來回|208元|
-||火車|新竹市區-新竹高鐵來回|28元|
+||火車|新竹市區-新竹高鐵來回|30元|
 ||高鐵|新竹嘉義來回|1300元|
+||寄車|麻豆轉運站|75元|
 |住宿|在風中的背包客Hostel||500元|
-|||總計|2036元|
+|食物|小米甜甜圈|50元<br>一份100元三個|
+||三明治大杯紅茶|50元|
+|廁所|小費|10元|
+|||總計|6823元|
 
 ## 注意事項
 
@@ -61,3 +70,6 @@ tags:
 
 車隊緊急聯絡人：0933-443289 江先生
 現場緊急聯絡人：0960-991914 陳先生
+司機：林先生
+
+車程 新竹高鐵站至司馬庫斯 8:20出發 11:00抵達
