--- a/source/_posts/230302-230304.md
+++ b/source/_posts/230302-230304.md
@@ -58,9 +58,9 @@ tags:
 ||高鐵|新竹嘉義來回|1300元|
 ||寄車|麻豆轉運站|75元|
 |住宿|在風中的背包客Hostel||500元|
-|食物|小米甜甜圈|50元<br>一份100元三個|
-||三明治大杯紅茶|50元|
-|廁所|小費|10元|
+|食物|小米甜甜圈|一份100元三個|50元|
+||早餐|三明治大杯紅茶|50元|
+|廁所|小費||10元|
 |||總計|6823元|
 
 ## 注意事項
